<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert2"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="254dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert1"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="127dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horil"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="256dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hori2"
        app:layout_constraintGuide_percent="0.6"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="256dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editmain"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/save"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:hint="@string/editmain" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/filetitle" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/vert1"
        app:layout_constraintTop_toTopOf="@+id/horil" />

    <Button
        android:id="@+id/load"
        app:layout_constraintLeft_toLeftOf="@+id/vert1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/vert2"
        app:layout_constraintTop_toTopOf="@+id/horil" />
    
    <Button
        android:id="@+id/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horil"
        app:layout_constraintLeft_toLeftOf="@+id/vert2"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/delete"
        android:background="@color/colorAccent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>







