<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertl"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horil"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="256dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/horil"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:hint="@string/login_password" />
    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:text="@string/register"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/horil"
        android:layout_marginTop="20dp"/>
    
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/horil"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/login"
        android:layout_marginLeft="20dp"
        android:text="@string/reset"/>


</android.support.constraint.ConstraintLayout>